testcases/error-cases/string-interpolation-error-01/error.txt
error[E0014]: unexpected end of file
 --> input.canon:3:1
  |
1 | val name = "Test"
2 | val message = `Hello, ${name}!
3 |
  | ^
  |
  = note: extraneous input '<EOF>' expecting {TEMPLATE_STRING_END, TEMPLATE_STRING_PART, '${', TEMPLATE_INTERPOLATION_SIMPLE}
error: aborting due to 1 previous error
